bitfields/tests/compile_error_cases/bitfield_field_duplicate_name.rs
#![feature(const_trait_impl)]
#![feature(const_try)]
#![feature(const_default)]

use bitfields::bitfield;

#[bitfield(u16)]
pub struct Bitfield {
    a: u8,
    a: u8,
}

fn main() {}
